--- a/public/style.css
+++ b/public/style.css
@@ -19,3 +19,16 @@ form div {
   margin: 1em;
   display: inline-block;
 }
+
+.food-container {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.single-food {
+  justify-content: center;
+  text-align: center;
+  height: 100vh;
+  width: 100vw;
+}
